--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 numpy<2.0
-PyQt5>=5.14.0,<5.15
-opencv-python<4.6.0
+PyQt5==5.15.10
+opencv-python==4.7.0.72
+opencv-contrib-python==4.7.0.72
 mysql-connector-python
 python-dotenv
 whispercpp_kit
